welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: '(' expected but identifier found.
		if tab(i)==lookingFor {
                   ^indexOfValue:8: error: illegal start of simple expression
	}
        ^